2007-09-25  Veerapuram Varadhan  <vvaradhan@novell.com>

	* SqlInt16Test.cs (ReadWriteXmlTestInternal, ReadWriteXmlTest):
	New tests.

	* SqlInt32Test.cs (ReadWriteXmlTestInternal, ReadWriteXmlTest):
	New tests.

	* SqlInt64Test.cs (ReadWriteXmlTestInternal, ReadWriteXmlTest):
	New tests.

	* SqlChars.cs (ReadWriteXmlTestInternal, ReadWriteXmlTest):
	New tests.

	* SqlDecimal.cs (ReadWriteXmlTestInternal, ReadWriteXmlTest):
	New tests.

	* SqlDouble.cs (ReadWriteXmlTestInternal, ReadWriteXmlTest):
	New tests.

	* SqlString.cs (ReadWriteXmlTestInternal, ReadWriteXmlTest):
	New tests.

2007-06-21  Nagappan A  <anagappan@novell.com>

	* SqlBooleanTest.cs (EqualityOperator): Fixed compiler warnings.
	(InequalityOperator): Fixed compiler warnings.

2007-05-04  Raja R Harinath  <rharinath@novell.com>

	* SqlDateTimeTest.cs (TicksRoundTrip, EffingBilisecond): New tests.

2007-03-09  Nagappan A  <anagappan@novell.com>

	* SqlBooleanTest.cs (GetXsdTypeTest, GreaterThanTest)
	(GreaterThanOrEqualTest, LessThanEqualTest, LessThanOrEqualTest):
	Added new tests.

	* SqlBinaryTest.cs (GetXsdTypeTest): Added new test.

	* SqlByteTest.cs (GetXsdTypeTest): Added new test.

	* SqlBytesTest.cs (GetXsdTypeTest): Added new test.

	* SqlDateTimeTest.cs (GetXsdTypeTest): Added new test.

	* SqlDecimalTest.cs (GetXsdTypeTest): Added new test.

	* SqlGuidTest.cs (GetXsdTypeTest): Added new test.

	* SqlInt16Test.cs (GetXsdTypeTest): Added new test.

	* SqlInt32Test.cs (GetXsdTypeTest): Added new test.

	* SqlInt64Test.cs (GetXsdTypeTest): Added new test.

	* SqlMoneyTest.cs (GetXsdTypeTest): Added new test.

	* SqlSingleTest.cs (GetXsdTypeTest): Added new test.

	* SqlStringTest.cs (GetXsdTypeTest): Added new test.

2007-02-09  Nagappan A  <anagappan@novell.com>

	* SqlBytesTest.cs: Added new tests

	* SqlCharsTest.cs: Added new tests

2006-07-19  Senganal T  <tsenganal@novell.com>

	* SqlDecimalTest.cs :
		- ArithmeticOperators, ConvertPrecToScale,